# Third-Semester

Assignment_Comparison of Sorting Algorithms/: Deliverable.docx  O(N).xlsx  README.md  Sorting complexity.c
Data Structures and Algorithms/: README.md
Data Structures and Algorithms/Graphs/: BFS.c  DFS.c  DFS_Stack.c  Kruskal.c  KruskalsUF1.c  KruskalsUF2.c  Prims.c  Topological_sort.c  a.out  graph.h
Data Structures and Algorithms/Linked List/: Creation and printing.c  Deletion.c  Double pointer.c  Editing a list.c  Merge.c  Reverse.c  Sorted_Creation.c  Sorted_Insertion.c  Unsorted_Insertion.c  circular list.c  list.h  llms.c  rotate.c  xorll.c
Data Structures and Algorithms/Number Systems/: Polynomial addition.c  arithmetic.c
Data Structures and Algorithms/Sorting/: Bubblesort.c  Heapsort.c  Insertion sort.c  Linear search.c  SelectionSort.c  bubble.c  mergesort.c  quicksort.c
Data Structures and Algorithms/Stacks and Queues/: Priority.c  postfix_infix.c
Data Structures and Algorithms/Trees/: AVL.c  BST.c  HeapTree.c  Simple_Paths.c  Topological_sort.c  Tree.h  TreeCopy.c  a.out  expression tree.c  tree_arr.c  tree_ll.c
Digital Design Using iVerilog/: README.md
Digital Design Using iVerilog/Decade/: Decade.v  TDecade.v
Digital Design Using iVerilog/Decoder/: Decoder.v  Decoder.vcd  TDecoder.v
Digital Design Using iVerilog/Encoder/: Encoder.v  Tencoder.v  Tencoder.v~
Digital Design Using iVerilog/Full Adder/: FA.v  TFA.v  TFA.v~
Digital Design Using iVerilog/Half Adder/: HA.v  HA.v~  THA.v  gtkHA.vcd
Digital Design Using iVerilog/J-K Flip Flop/: JK.v  TJK.v  gtkJK.vcd
Digital Design Using iVerilog/J-K Flip Flop using D Flip Flop/: JKbyD.v  TJKbyD.v
Digital Design Using iVerilog/Johnson Counter/: Johnson.v  Johnson.vcd  TJohnson.v
Digital Design Using iVerilog/Priory/: Priory.v  Priory.v~  TPriory.v
Digital Design Using iVerilog/Ripple Counter/: Binary.v  TBinary.v
Digital Design Using iVerilog/SR Flip Flop/: LSR.v  LSR.vcd  TLSR.v
Digital Design Using iVerilog/UCT/: TUCT.v  UCT.v  UCT.v~
Digital Design and Hardware Implementation of a Password Authenticaing System/: Hardware circuitry.circ  Password authenticator user manual.docx  README.md
Learning Hardware Design using System C/: README.md
Learning Hardware Design using System C/32 bits SI SO/: CMakeLists.txt  Driver.h  Sr.h  drive.h  main.cpp  siso.scb
Learning Hardware Design using System C/32 bits SI SO/.siso_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Learning Hardware Design using System C/Assingment/: README.txt
Learning Hardware Design using System C/Assingment/Q1/: CMakeLists.txt  Driver.h  hello.scb  main.cpp  print.h
Learning Hardware Design using System C/Assingment/Q1/.hello_build/: CMakeCache.txt  Makefile  PrintHello.vcd  PrintHello.xml  cmake_install.cmake  compile_commands.json
Learning Hardware Design using System C/Assingment/Q2/Decoder/: 4to16.h  Ar2to4.h  CMakeLists.txt  decoder.scb  driver.h  main.cpp  monitor.h
Learning Hardware Design using System C/Assingment/Q2/Decoder/.decoder_build/: CMakeCache.txt  Decoder.vcd  Decoder.xml  Makefile  cmake_install.cmake  compile_commands.json
Learning Hardware Design using System C/Assingment/Q2/Encoder/: 16to4.h  CMakeLists.txt  Encoder.vcd  Or4.h  driver.h  encoder.scb  main.cpp  monitor.h
Learning Hardware Design using System C/Assingment/Q2/Encoder/.encoder_build/: CMakeCache.txt  Encoder.xml  Makefile  Print.vcd  cmake_install.cmake  compile_commands.json
Learning Hardware Design using System C/Assingment/Q3/: CMakeLists.txt
Learning Hardware Design using System C/Assingment/Q3/.halfAdder_build/: HalfAdderVCD.vcd  HalfAdderVCD.xml  Makefile  cmake_install.cmake  compile_commands.json
Learning Hardware Design using System C/Assingment/Q4/: CMakeLists.txt  fullAdder.scb
Learning Hardware Design using System C/Assingment/Q4/.fullAdder_build/: CMakeCache.txt  FullAdderVCD.vcd  FullAdderVCD.xml  Makefile  cmake_install.cmake  compile_commands.json
Learning Hardware Design using System C/Assingment/Q5/: CMakeLists.txt  nbitadder.scb
Learning Hardware Design using System C/Assingment/Q5/.nbitadder_build/: Makefile  cmake_install.cmake  compile_commands.json
Learning Hardware Design using System C/Assingment/Q6/Version1/: CMakeLists.txt  control.cpp  interconnect.scb  machinA.h  machinB.h
Learning Hardware Design using System C/Assingment/Q6/Version1/.interconnect_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Learning Hardware Design using System C/Assingment/Q7/: CMakeLists.txt  DFlipFlop.scb
Learning Hardware Design using System C/Assingment/Q7/.DFlipFlop_build/: CMakeCache.txt  DFlipFlop.vcd  DFlipFlop.xml  Makefile  cmake_install.cmake  compile_commands.json
Learning Hardware Design using System C/Assingment/Q8/: CMakeLists.txt  Reg4.h  driver.h  flipflop.h  main.cpp  monitor.h  reg.scb
Learning Hardware Design using System C/Assingment/Q8/.reg_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Learning Hardware Design using System C/D Flip Flop/: CMakeLists.txt  d_flip_flop.h  driver.h  main.cc  monitor.h
Learning Hardware Design using System C/HalfAdder/: halfAdder.scb
Learning Hardware Design using System C/Interconnect/: CMakeLists.txt  common.h  interconnect.scb  machinea.h  machineb.h  main.cpp
Learning Hardware Design using System C/Interconnect/.interconnect_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Learning Hardware Design using System C/Interconnect/.transmission_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Learning Hardware Design using System C/OR Gate/: DUT.h  Driver.h  main.cpp  monitor.h
Learning MIPS Assembly using SPIM/: README.md
Learning MIPS Assembly using SPIM/MIPS assignment/: README.txt
Learning Python/: README.md
Learning Python/Learning Python The Hard Way/: CLOOK.py  CSCAN.py  Dictionaries.py  Es12ListsRangesLoops.py  Ex10IfStatement.py  Ex11Boolean.py  Ex1Operators.py  Ex2Variables.py  (+14 more)
(+34 files in other folders)
